Fixed overflow for headerow and showing fullscreen dialog for smaller screens.

--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,7 @@
   padding: 1.5em 0.5rem;
   text-align: center;
   border-bottom: 1px solid lightgray;
+  overflow: auto;
 }
 
 .day-weather-row-date {
